# atlas-maps

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_RESULTS.md  Dockerfile  Dockerfile.test  NAVIGATION_MARKERS.md  README.md  ReadME.md  TESTING.md  deploy_front.sh  extract_test_data.py  frontend.py  generate_report.py  modal_backend.py  page_generation.py  pyproject.toml  requirements.txt  run_full_test.py  run_gpx_test.py  simple_test.py  test_real_gpx.py  utils.py
.github/workflows/: test.yml
gpx_files/: Wanderung Februar 2026 ohne Zusatz.gpx  [Hard]viarhona.gpx  [Hardest] french-divide.gpx  [Standard]mini_map.gpx
tests/: test_gpx_to_map.py  test_page_generation.py  test_processing_steps.py
