[project]
name = "gpx-to-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpxpy>=1.6.2",
    "modal>=0.73.145",
    "pillow>=11.1.0",
    "pyproj>=3.7.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "stqdm>=0.0.5",
    "tqdm>=4.67.1",
]
